--- a/cadmium.service
+++ b/cadmium.service
@@ -1,6 +1,9 @@
 [Unit]
 Description=CaDMium
 After=systemd-user-sessions.service
+Conflicts=getty@tty1.service
+After=systemd-user-sessions.service getty@tty1.service plymouth-quit.service systemd-logind.service
+
 
 [Service]
 ExecStart=/usr/bin/cadmium
