First working version* (#1)
* hopefully it works now

* actually spawn startx

* print pwd

* print pwd

* print pwd

* whoami-temp

* added suid

* added suid

* added print user

* fixed group ids

* inc chvt version

* flipped setgid/setuid order

* chvt(1) after setuid

* change X to vt7

* change X to vt7

* chown

* chown

* removed chvt

* removed startx vt7

* removed chown

* restructure

* added print xauth

* starting X

* updated get free display to use path exists

* fuck commit messages

* yeet

* fuck

* yeet

* yeet

* 7

* groups

* groups

* chown

* nochown

* print

* added xdg envvars

* added env

* lang

* shovel

* it works! :tada:

* hi

* hey

Co-authored-by: Jonathan Donszelmann <jonabent@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "CaDMium"
+name = "cadmium"
 version = "0.1.0"
 authors = ["Victor Roest <victor@xirion.net>"]
 edition = "2018"
@@ -9,4 +9,8 @@ logind-dbus="0.1.1"
 rpassword="4.0.1"
 pam="0.7.0"
 pam-sys="0.5.6"
-nix = "0.15.0"
+nix="0.15.0"
+users="0.9.1"
+chvt="0.2.0"
+rand="0.7.2"
+xcb="0.9.0"
