Add pkgbuild since we are all using arch (#4)
* Add pkgbuild and gitignore for the created files (done in the most generic way possible)

* So pasting is hard

* Change makedepends to just require cargo, since that is the more common case

* Changed License in PKGBUILD


Co-authored-by: Julius de Jeu <julius@voidcorp.nl>

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,8 @@ tags
 [._]*.un~
 
 # End of https://www.gitignore.io/api/vim,rust,floobits,clion+all,intellij+all
+
+
+## PKGBUILD creation
+/cadmium-*
+pkg/
