--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 [dependencies]
 logind-dbus="0.1.1"
 rpassword="4.0.1"
-pam="0.7.0"
+pam = { git = "https://github.com/NULLx76/pam" }
+pam-sys = "0.5.6"
 nix="0.15.0"
 users="0.9.1"
 chvt="0.2.0"
