--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 [dependencies]
 logind-dbus="0.1.1"
 rpassword="4.0.1"
-pam = { git = "https://github.com/NULLx76/pam" }
-pam-sys = "0.5.6"
+pam = { git = "https://github.com/NULLx76/pam#3618c59c29e3478eea1eabbc01013e78dab2c663" }
 nix="0.15.0"
 users="0.9.1"
 chvt="0.2.0"
