--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,4 +14,5 @@ jobs:
         sudo apt-get update -y
         sudo apt-get install libdbus-glib-1-dev libpam0g-dev -y
         cargo build --verbose
-        
+    - name: Test
+      run: cargo test
