--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build
       run: |
-        sudo apt-get update -y
+        sudo apt-get update -y || true
         sudo apt-get install libdbus-glib-1-dev libpam0g-dev -y
         cargo build --verbose
     - name: Test
