--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 rpassword="4.0.1"
-pam = { git = "https://github.com/NULLx76/pam#3618c59c29e3478eea1eabbc01013e78dab2c663" }
+pam = { git = "https://github.com/NULLx76/pam", branch="who-needs-auth-anyway"}
 nix="0.15.0"
 users="0.9.1"
 chvt="0.2.0"
